added labels in form, going to remove jquery soon :)

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <body>
         <div id="seeker">
             <form>
-                <p><input type="search" placeholder="find your favorite movies info" id="finder">
-                   <input type="submit" id="search" value="Find">
-                </p>
+               <label for="search">
+                Search your film: <input type="search" placeholder="find your favorite movies info" id="finder">
+                <input type="submit" id="search" value="Find">
+               </label>
             </form>
         </div>
         <div id="displayer">
             <img src=""  id="pic">
-            <table id="list" border="0">
-              
-            </table>
+            <table id="list" border="0"></table>
         </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <script src="scripts/script.js"></script>
