--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
         <link rel="stylesheet" type="text/css" href="movies.css">
     </head>
     <body>
-        <div id="seeker">
-            <form>
-               <label for="search">
-                Search your film: <input type="search" placeholder="find your favorite movies info" id="finder">
-                <input type="submit" id="search" value="Find">
-               </label>
-            </form>
+        <div id="root">
+            
         </div>
-        <div id="displayer">
-            <img src=""  id="pic">
-            <table id="list" border="0"></table>
-        </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        
    <script src="scripts/script.js"></script>
     </body>
 </html>
