--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     </head>
     <body>
         <div id="root">
-            <form method="get">
-                <label>
-                    Search by Movie Title e.g. "Titanic" <input type="text" id="movie-search">
-                    
-                </label>
-            </form>
+            <label>
+                Enter a Movie Title:<input type="text" id="movie-search">
+            </label>
+            <button type="submit">submit</button>
         </div>
         
    <script src="js/script.js"></script>
