--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     </head>
     <body>
         <div id="root">
-            <label>
-                Enter a Movie Title:<input type="text" id="movie-search">
-            </label>
-            <button type="submit">submit</button>
+            Find movie by title:
+            <input type="text" id="title-search">
+            <button id="butt">submit</button>
+
+            <div id="movie-res">
+                
+            </div>
         </div>
         
    <script src="js/script.js"></script>
