implemented some CSS visual changes in fonts and aligning elements

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        
+       <link rel="stylesheet" href="css/style.css"> 
     </head>
     <body>
         <div id="root">
-            Find movie by title:
-            <input type="text" id="title-search">
-            <button id="butt">submit</button>
+            <p>Find movie by title:</p>
+                <input type="text" id="title-search">
+                <button id="butt">submit</button>
 
             <div id="movie-res">
                 
